# audio_viz

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/add-config-field/: SKILL.md
.claude/skills/review-visualizer/: SKILL.md
.github/workflows/: build.yml  sync-upstream.yml
src/: beat.rs  lib.rs  main.rs  visualizer.rs  visualizer_utils.rs
src/visualizers/: fire.rs  lissajous.rs  matrix.rs  radial.rs  scope.rs  spectrum.rs  vu.rs
src/visualizers/abstract/: crystal.rs  orbit.rs  pulsar.rs
src/visualizers/effects/: aurora.rs  fire.rs  matrix.rs  missiles.rs  night_sky.rs  plasma.rs  ripple.rs  tunnel.rs
src/visualizers/frequency/: radar.rs  radial.rs  spectrum.rs  vu.rs  waterfall.rs
src/visualizers/scopes/: classic_lissajous.rs  lissajous.rs  polar.rs  scope.rs
web/: Cargo.toml  audio.js  index.html  main.js  renderer.js
web/src/: lib.rs
