[package]
name        = "audio_viz"
version     = "0.1.0"
edition     = "2024"
description = "Multi-mode terminal audio visualizer"
build       = "build.rs"

[[bin]]
name = "audio_viz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
# Cross-platform audio capture.
cpal     = { version = "0.15", default-features = false }
# Fast FFT
rustfft  = "6"
# Terminal control: raw mode, ANSI colours, cursor, resize events
crossterm = "0.28"
# CLI argument parsing
clap     = { version = "4", features = ["derive"] }
# Random numbers (matrix rain, phase dots, fire noise, lissajous)
rand     = "0.8"
# JSON config serialization / deserialization
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Used by stderr_silence::Silencer to suppress ALSA/JACK C-library diagnostics
libc     = "0.2"

[build-dependencies]
# build.rs only uses std — no extra deps needed

[profile.release]
opt-level = 3
lto       = true
