[package]
name        = "audio_viz_web"
version     = "0.1.0"
edition     = "2024"
description = "WebAssembly frontend for audio_viz"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Disable the default "terminal" feature so crossterm/cpal/clap are excluded
audio_viz    = { path = "..", default-features = false }
wasm-bindgen = "0.2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rand         = { version = "0.8", features = ["getrandom"] }

# getrandom needs the js feature to work in WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
